fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
   font-weight: 400;
   line-height: 1.95;
   position: relative;
-  overflow:hidden;
+  /* overflow:hidden; */
 }
 i.icon {
   line-height: 100%;
@@ -281,9 +281,6 @@ hr {
 }
 
 @media (max-width: 650.98px) {
-  body {
-    overflow: hidden;
-  }
   .main-wrapper .sidebar {
     margin: 0px;
   }
@@ -417,18 +414,6 @@ hr {
   top: 8px;
   width: 200px;
   z-index: 2;
-}
-
-.mobile-navbar .navbar-collapse .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.6);
-  font-size: 14px;
-  font-weight: 400;
-  padding: 7px 0;
-}
-
-.mobile-navbar .navbar-collapse .navbar-nav .nav-link:hover,
-.mobile-navbar .navbar-collapse .navbar-nav .nav-link:focus {
-  color: #fff;
 }
 
 /*----------- Home -----------*/
