--- a/css/style2.css
+++ b/css/style2.css
@@ -151,7 +151,7 @@
     height: 100%;
     margin:0;
     padding: 0;
-    overflow: hidden;
+    overflow-x: hidden;
   }
 }
 
@@ -161,6 +161,6 @@
     height: 100%;
     margin:0;
     padding: 0;
-    overflow: hidden;
+    overflow-x: hidden;
   }
 }
